--- a/src/styles/Collections.module.css
+++ b/src/styles/Collections.module.css
@@ -13,8 +13,7 @@
   left: 50px;
   width: 1280px;
   height: 100vh;
-
-  background: #1d2123;
+  background: #1D2123;
 }
 .cbutton {
   position: absolute;
@@ -25,25 +24,19 @@
   height: 37px;
   left: 96px;
   top: 96px;
-
   /* Regular/14px */
-
   /* /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 120%;
   /* identical to box height, or 17px */
-
   /* dark */
-
-  color: #1d2123;
+  color: #1D2123;
   /* secondary */
-
-  background: #facd66;
+  background: #FACD66;
   border-radius: 27px;
 }
-
 .lbutton {
   justify-content: center;
   align-items: center;
@@ -55,30 +48,23 @@
   opacity: 0.25;
   padding: 10px;
   /* light */
-
-  border: 1px solid #efeee0;
-
+  border: 1px solid #EFEEE0;
   /* Regular/14px */
-
   /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 120%;
   /* identical to box height, or 17px */
-
   text-align: center;
-
   /* light */
-
-  color: #efeee0;
+  color: #EFEEE0;
   border-radius: 27px;
 }
 .ccontainer {
   position: absolute;
   display: flex;
   flex-direction: row;
-
   width: 950px;
   height: 234px;
   left: 96px;
@@ -86,35 +72,38 @@
   background: inherit;
   border-radius: 25px;
 }
-
 .containeritems {
   position: relative;
   width: 213px;
   height: 234px;
   margin-right: 20px;
   border-radius: 20px;
-
   margin-right: 20px;
-  /* transition: 0.5s; */
+  transition: 2s;
+  /* overflow: hidden ; */
+  /* box-shadow:0 0 10px rgba(0,0,0,0.3); */
 }
+/* .containeritems:hover {
+  transform: scale(1.1);
+  transition: scale(3.1);
+  visibility:visible;
+  opacity:1;
 
-.containeritems:hover {
-  box-shadow: 0px 30px 18px -8px;
-  transform: scale(1.1, 1.1);
-  background-color: transparent;
-  z-index: 2;
-  height: 100%;
-  /* opacity:inherit; */
-}
-
+} */
 .containerpic {
-  position: relative;
   position: relative;
   border-radius: 20px;
   margin-left: 10px;
-  /* transition: 1s; */
+  /* transition:0.3s; */
+  overflow: hidden ;
+  /* box-shadow:0 0 10px rgba(0,0,0,0.3); */
 }
-
+.containerpic:hover {
+  transform: scale(1.1);
+  transition: scale(3.1);
+  visibility:inherit;
+  opacity:1;
+}
 .containertitle {
   position: relative;
   width: 65px;
@@ -122,19 +111,16 @@
   top: -80px;
   left: 19px;
   /* Regular/24px */
-
   /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 180%;
   /* identical to box height, or 29px */
-
   /* light */
-
   color: white;
-  /* transform: scale(1.3);
-  z-index: 2; */
+  transform: scale(1.3);
+  z-index: 2;
 }
 .containersub_title {
   position: relative;
@@ -144,20 +130,15 @@
   top: -80px;
   left: 20px;
   /* Regular/24px */
-
   /*font-family: "Quicksand";*/
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 120%;
   /* identical to box height, or 12px */
-
   text-align: center;
-
   /* light */
-
-  color: #efeee0;
-
+  color: #EFEEE0;
   opacity: 0.75;
 }
 .nav {
@@ -167,40 +148,32 @@
   left: 98px;
   top: 0px;
   border-radius: 5px;
-
   background: rgb(73, 70, 70);
 }
-
 .search {
   position: absolute;
   left: 39px;
   top: 30px;
   color: rgba(255, 255, 255, 0.25);
 }
-
 .MyCollectionButton {
   /* Auto layout */
   position: absolute;
-
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 10px;
   gap: 10px;
-
   position: absolute;
   width: 120px;
   height: 37px;
   left: 96px;
   top: 96px;
-
   /* secondary */
-
-  background: #facd66;
+  background: #FACD66;
   border-radius: 27px;
 }
-
 .LikesButton {
   position: absolute;
   display: flex;
@@ -209,14 +182,12 @@
   align-items: center;
   padding: 10px;
   gap: 10px;
-
   width: 120px;
   height: 37px;
   left: 96px;
   top: 96px;
   background: red;
 }
-
 .minput {
   position: absolute;
   width: max-content;
@@ -232,10 +203,8 @@
   font-size: 14px;
   line-height: 18px;
   /* identical to box height */
-
   color: rgba(255, 255, 255, 0.25);
 }
-
 .sidebar {
   left: 0px;
   top: 0px;
@@ -256,10 +225,8 @@
   height: 230px;
   left: 20px;
   top: 96px;
-
   /* dark-alt */
-
-  background: #090a0a;
+  background: #090A0A;
   border-radius: 32px;
 }
 .side_personal {
@@ -268,10 +235,8 @@
   height: 127px;
   left: 20px;
   top: 346px;
-
   /* dark-alt */
-
-  background: #090a0a;
+  background: #090A0A;
   border-radius: 32px;
 }
 .footer {
@@ -290,11 +255,9 @@
   top: 26.83;
   outline: none;
   /* secondary */
-
-  /* background: #facd66; */
+  /* background: #FACD66; */
   justify-self: start;
   /* navicon-active-shadow */
-
   /* box-shadow: 0px 0px 11px rgba(250, 205, 102, 0.25); */
 }
 .icon {
@@ -309,5 +272,5 @@
   top: 20px;
   margin-top: 20px;
   /* padding-top: 7px; */
-  /* background: #c4c0c0; */
+  /* background: #C4C0C0; */
 }
