--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,7 +11,7 @@
   width: 1280px;
   height: 100vh;
   left: 50px;
-  overflow:visible;
+  overflow: visible;
   background: #1d2123;
 }
 
@@ -44,7 +44,7 @@
   left: 65px;
   padding-left: 9px;
   background-color: inherit;
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
@@ -145,7 +145,7 @@
 
   /* Regular/12px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -162,7 +162,7 @@
   top: 137px;
   /* Bold/35px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
   font-size: 35px;
@@ -177,7 +177,7 @@
   height: 51px;
   left: 45px;
   top: 185px;
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -200,7 +200,7 @@
   top: 0px;
   /* Regular/14px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -232,7 +232,7 @@
 
   /* Bold/24px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -291,7 +291,7 @@
 
   /* Regular/17px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -309,7 +309,7 @@
 
   /* Regular/12px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -335,7 +335,7 @@
 
   /* Regular/12px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -374,7 +374,7 @@
 
   /* Bold/24px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -394,7 +394,7 @@
 
   /* Bold/24px */
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -434,7 +434,7 @@
   width: 85px;
   height: 15px;
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -448,7 +448,7 @@
   width: 85px;
   height: 15px;
 
-  font-family: 'Quicksand';
+  font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
